# 2508-week-4

./: .gitignore  README.md
day_0/: prework_1_poetry_workflow.md  prework_2_openai_api_key.md
day_0/prework_3_jupyter_setup/: README.md  jupyter_test.ipynb  pyproject.toml
day_1/: lab_1_prompt_engineering.md
day_1/homework_summarized_memory/: summarized_memory.md
day_1/lab_2_openai_api/: README.md  openai_api.ipynb  pyproject.toml
day_1_solutions/: solutions_lab_2_openai_api.ipynb
day_1_solutions/solutions_homework_summarized_memory/: README.md  pyproject.toml  summarized_memory.ipynb
day_2/: homework_2_book_search.md  homework_3_brainstorming_rag_data.md
day_2/homework_1_setting_up_vector_db/: README.md  load_embeddings.py  pyproject.toml  setup_db.py
day_2/lab_1_compare_embeddings/: README.md  compare_embeddings.ipynb  pyproject.toml  vectors.txt
day_2/lab_2_create_embeddings/: README.md  create_embeddings.ipynb  pyproject.toml
day_2_solutions/: solutions_lab_1_compare_embeddings.ipynb
day_2_solutions/solutions_homework_2_book_search/: .env.example  README.md  app.py  book_chapter_data.json  book_search.py  pyproject.toml
day_2_solutions/solutions_lab_2_create_embeddings/: README.md  attention_is_all_you_need.txt  create_embeddings.ipynb
day_3/homework_1_rag_walkthrough/: README.md  pyproject.toml
day_3/homework_1_rag_walkthrough/src/: db_check.py  main.py  rag.py  search.py
day_3/homework_2_rag_on_your_own/: README.md
day_3/lab_1_semantic_chunking/: README.md  launch_school_docs.txt  pyproject.toml  semantic_chunking.ipynb
day_3/lab_2_structured_outputs/: README.md  pyproject.toml  structured_outputs.ipynb
day_3_solutions/: solutions_lab_1_semantic_chunking.ipynb  solutions_lab_2_structured_outputs.ipynb
day_3_solutions/solutions_homework_1_rag_walkthrough/: README.md  main.py  rag.py
day_4/lab_1_function_calling/: README.md  lab_1_function_calling.ipynb  pyproject.toml
day_4/lab_2_agentic_expense_tracker/: README.md  agentic_expense_tracker.ipynb  pyproject.toml
day_4_solutions/: solutions_lab_1_function_calling.ipynb  solutions_lab_2_agentic_expense_tracker.ipynb
day_5/: lab_1_tracing_with_arize.md
day_5/lab_2_llm_as_judge/: README.md  dataset.json  llm_as_judge.ipynb  pyproject.toml
day_5_solutions/: solutions_lab_2_llm_as_judge.ipynb
