[tool.poetry]
name = "prework_3_jupyter_setup"
version = "0.1.0"
description = ""
authors = ["Launch School"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
jupyter = ">=1.1.1,<2.0.0"
ipykernel = ">=6.30.1,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
