[tool.poetry]
name = "lab_1_semantic_chunking"
version = "0.1.0"
description = ""
authors = ["Launch School"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
ipykernel = "^6.30.1"
jupyter = "^1.1.1"
openai = "^1.100.2"
python-dotenv = "^1.1.1"
langchain-experimental = "^0.3.4"
langchain-openai = "^0.3.30"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
